testData/inspections/suppressor/suppressionsWork.adoc
// suppress inspection "AsciiDocReferenceResolve" for whole file

[[hi]]
== Hi

<<his>>

// suppress inspection "AsciiDocReferencePattern"
<<-his>>

<<<error descr="Anchor pattern invalid, problem with prefix: '-'">-his</error>>>
